Fix Food Menu Button Display Unknown Values, FoodType API Query Fix, Food Menu Image Gap Responsive Issues

--- a/src/containers/FooderMenu/FooderMenu.module.css
+++ b/src/containers/FooderMenu/FooderMenu.module.css
@@ -1,6 +1,10 @@
+
 .BlockContent{
     height:100%;
+    padding-top:100px;
 }
+
+
 
 .BlockTitle {
     text-align : center;
@@ -18,14 +22,11 @@
     height:50%;
     text-align:center;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin:auto;
     border:0;
-    margin-top: 10%;
     box-shadow: 3px 3px 3px 3px #ccc;
     border-radius: 2%;
 }
-
 
 .BlockSelector{
     border: 0;
